chore: cleanup treeWalker